--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <form>
     <header>
 
         <nav id="navbar">
@@ -69,6 +70,7 @@
         </div>
 
     </main>
+    </form>
 </body> 
 
 </html>
